add inital recording logic

--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -5,3 +5,15 @@ base()
 
 body
   padding: 50px
+
+.button
+  margin: 5px
+  width: 200px
+  height: 100px
+  line-height: 100px
+  text-align: center
+  background-color: #aaa
+  color: #fff
+
+.play, .stop, .record
+  @extend .button
