--- a/views/index.jade
+++ b/views/index.jade
@@ -1,9 +1,17 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}!
+  .track
+    .record RECORD
+    .stop STOP
+    .play PLAY
+  .track
+    .record RECORD
+    .stop STOP
+    .play PLAY
+  .track
+    .record RECORD
+    .stop STOP
+    .play PLAY
 
-  .record RECORD
-  .stop STOP
-  .play PLAY
+  .playall PLAY ALL
